--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -24,3 +24,10 @@ body {
   border-radius: 0;
   box-shadow: 0px 1px 3px #2a2a2a;
 }
+
+.navbar-inverse .navbar-brand {
+  color: #4AD2FF;
+  font-family: 'gooddogregular', sans-serif;
+  font-size: 2em;
+  letter-spacing: 0.7px;
+}
