--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,4 +1,4 @@
-<%= will_paginate @places %>
+<%= will_paginate @places, previous_label: h("<"), next_label: h(">") %>
 <% @places.each do |place| %>
 	<div class="booyah-box col-xs-10 col-xs-offset-1">
 		<h1><%= place.name %></h1>
