--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -42,7 +42,7 @@
 
 <div class="clear"></div>
 
-<!-- Modal -->
+<!-- Comments Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -72,6 +72,37 @@
   </button>
 </div>
 <div class="clear"></div>
+
+<!-- Photo Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Add a Photo</h4>
+      </div>
+      <div class="modal-body">
+        <%= simple_form_for @photo, :url => place_photos_path(@place) do |f| %>
+          <%= f.input :caption %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>   
+          <%= f.submit "Add a Photo", :class => 'btn btn-primary' %>
+      </div>
+        <% end %>
+    </div>
+  </div>
+</div>
+
+<div class="col-xs-10 col-xs-offset-1">
+  <h1 class="pull-left">Photos</h1>
+  <!-- Button trigger modal -->
+  <button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
+    Add Photos
+  </button>
+</div>
+<div class="clear"></div>
+
 
 <% @place.comments.each do |comment| %>
   <div class="col-xs-12 col-sm-6">
