--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -84,6 +84,7 @@
       <div class="modal-body">
         <%= simple_form_for @photo, :url => place_photos_path(@place) do |f| %>
           <%= f.input :caption %>
+          <%= f.input :picture %>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>   
@@ -103,7 +104,6 @@
 </div>
 <div class="clear"></div>
 
-
 <% @place.comments.each do |comment| %>
   <div class="col-xs-12 col-sm-6">
     <blockquote>
@@ -112,6 +112,18 @@
       <% end %>
       <%= comment.message %>
       <smalL><%= comment.user.email %></small>
+    </blockquote>
+  </div>
+<% end %>
+
+<% @place.photos.each do |photo| %>
+  <div class="booyah-box col-xs-offset-1">
+    <blockquote>
+      <% if places.photo.present? %>
+        <b><%= places.photo %></b> -
+      <% end %>
+      <%= photo.caption %>
+      <smalL><%= photo.user.email %></small>
     </blockquote>
   </div>
 <% end %>
