--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -22,9 +22,9 @@
 		<% end %>
 
 		<% if place.photos.present? %>
-			<div>
-				<%= image_tag place.photos.last.picture %>
-				<%= place.photos.last.caption %>
+			<div class="col-xs-10 col-xs-offset-1">
+				<%= image_tag place.photos.last.picture, :class => 'img-responsive' %>
+				<blockquote><p><%= place.photos.last.caption %></p></blockquote>
 			</div>
 		<% end %>
 
