--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -120,8 +120,8 @@
 <h1 class="pull-left">Photos</h1>
   <div class="clear">
   <% @place.photos.each do |photo| %>
-    <div class="booyah-box">
-        <%= image_tag photo.picture %>
-        <%= photo.caption %>
+    <div class="booyah-box col-xs-10 col-xs-offset-1">
+        <%= image_tag photo.picture, :class => 'img-responsive' %>
+        <blockquote><p><%= photo.caption %></p></blockquote>
     </div>
   <% end %>
