--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -11,19 +11,19 @@
   <!-- Wrapper for slides -->
 <div class="carousel-inner">
     <div class="item active">
-      <%= image_tag 'pizza.jpg' %>
+      <%= image_tag 'pizza.jpg', :class => 'img-responsive' %>
       <div class="carousel-caption">
         Find the best pizza places!
       </div>
     </div>
-    <div>
-      <%= image_tag 'hibachi.jpg' %>
+    <div class="item">
+      <%= image_tag 'hibachi.jpg', :class => 'img-responsive' %>
       <div class="carousel-caption">
         Blazingly Delicious!
       </div>
 	</div>
-    <div>
-      <%= image_tag 'sushi platter.jpg' %>
+    <div class ="item">
+      <%= image_tag 'sushi platter.jpg', :class => 'img-responsive' %>
       <div class="carousel-caption">
         Nom Nom Nom!
       </div>
