--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -121,7 +121,9 @@
   <div class="clear">
   <% @place.photos.each do |photo| %>
     <div class="booyah-box col-xs-10 col-xs-offset-1">
+      <%= link_to photo.picture.to_s, :class => 'fancybox' do %>
         <%= image_tag photo.picture, :class => 'img-responsive' %>
+      <% end %>
         <blockquote><p><%= photo.caption %></p></blockquote>
     </div>
   <% end %>
